@@ -28,6 +28,7 @@ end
 #  linked_db_project_id       :integer          indexed => [db_project_id]
 #  position                   :integer
 #  linked_remote_project_name :string(255)
+#  vrevmode                   :string(10)       default("standard")
 #
 # Indexes
 #
