@@ -72,6 +72,7 @@ class Project
           if Project.find_remote_project(l['project'])
             project.linking_to.create(project: project,
                                        linked_remote_project_name: l['project'],
+                                       vrevmode: l['vrevmode'],
                                        position: position)
           else
             raise SaveError, "unable to link against project '#{l['project']}'"
@@ -79,8 +80,9 @@ class Project
         else
           raise SaveError, 'unable to link against myself' if link == project
           project.linking_to.create!(project: project,
-                                      linked_db_project: link,
-                                      position: position)
+                                     linked_db_project: link,
+                                     vrevmode: l['vrevmode'],
+                                     position: position)
         end
         position += 1
       end
