@@ -12,12 +12,14 @@ UseRemoteInstanceIndirect_to_UseRemoteInstance:
 linked_db_projects_42:
   id: 42
   position: 1
+  vrevmode: 'extend'
   linked_remote_project_name: nil
   project: BaseDistro2.0_LinkedUpdateProject
   linked_db_project: BaseDistro2.0
 linked_db_projects_44:
   id: 44
   position: 1
+  vrevmode: 'extend'
   linked_remote_project_name: nil
   project: BaseDistro_Update
   linked_db_project: BaseDistro
